--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{% static 'css/alert.css' %}">
     <!-- icon -->
     <link rel="icon" href="{% static 'img/logo.png' %}" type="image/x-icon">
+    <!-- Flaction -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.2.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     {% block style %} {% endblock %}
     
     <!-- The sytle is for base page! -->
