--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -5,7 +5,7 @@
         <ul class="nav_links">
             <li><a href="{% url 'home:home' %}">Home</a></li>
             <li><a href="#">Dowenload</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="{% url 'home:blogs' %}">Blog</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </nav>
