--- a/userprofile/static/userprofile/css/feed.css
+++ b/userprofile/static/userprofile/css/feed.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Ysabeau:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anek+Gurmukhi&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Dosis&family=Quicksand&family=Urbanist&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: 'coolvetica rg';
+    src: url('../../../static/fonts/coolvetica/coolvetica rg.otf');
+}
 /* left bar */
 
 .left {
@@ -127,4 +132,110 @@ hr.hr-users{
     .search-form{
         margin-top: 10px;
     }
+}
+
+
+/* right bar */
+
+.right{
+    width: 100%;
+    height: 100%;
+    padding: 0 5px 0 50px;
+    margin: 0;
+}
+
+.right-title{
+    display: flex;
+    justify-content: center;
+}
+
+.right-title h3{
+    margin: 10px 0;
+    font-family: 'Noto Sans', sans-serif;
+    color: #2b4748;
+    font-weight: 1000;
+}
+
+.blogs{
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-items: center;
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.blog {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    text-decoration: none;
+    color: black;
+    border-radius: 20px;
+    transition: all .5s ease;
+
+}
+
+.blog:hover{
+    background-color: rgba(0, 0, 0, .1);
+    height: 500px;
+    transition: all 1s cubic-bezier(0.11, 0.65, 0.33, 0.94);
+}
+
+.image-container{
+    width: 100%;
+    height: auto;
+    min-height: 100px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.image-container img{
+    width: 100%;
+    height: auto;
+    object-fit:contain;
+    justify-self: start;
+    object-fit:scale-down;
+}
+
+
+
+.blog-content{
+    padding-top: 20px;
+    width: 100%;
+    height: auto;
+    word-wrap: break-word;
+
+}
+
+.blog-title{
+    font-family: 'coolvetica rg', sans-serif;
+    font-weight: 500;
+    font-size: 22px;
+}
+
+.blog-txt{
+    margin-top: 10px;
+    line-height: 18px;
+    font-family: 'Quickdand', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: .2px;
+    color: rgba(0, 0, 0, .7);
+}
+
+.blog-created{
+    margin-top: 20px;
+    font-weight: 500;
+    font-size: 14px;
+    font-family: 'Quickdand', sans-serif;
+    letter-spacing: -0.5px;
+    color: rgba(0, 0, 0, .4);
 }
