--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -90,6 +90,10 @@
     
 {% endblock %}
 
+{% block right %}
+    {% include 'userprofile/include/right-bar.html' %}
+{% endblock %}
+
 {% block script %}
     <script>
 document.addEventListener('DOMContentLoaded', function() {
